bdr.BDR.scala.error
Erreur de compilation :
BDR:2: error: not found: value While
While (!fini) {
^BDR:5: error: not found: value mes
                  if (mes=="R") {droite();avance()}
                      ^BDR:7: error: not found: value mes
                   if (mes == "L") {gauche();avance()}
                       ^BDR:9: error: not found: value mes
                     if (mes == "I") {droite();droite();avance()}
                         ^BDR:11: error: not found: value mes
                       if (mes=="A") avance();
                           ^BDR:13: error: not found: value mes
                         if (mes=="B") {avance();avance()}
                             ^BDR:15: error: not found: value mes
                           if (mes=="C") {avance();avance();avance()}
                               ^BDR:17: error: not found: value mes
                             if (mes=="Z") {recule()}
                                 ^BDR:19: error: not found: value mes
                               if (mes=="Y") {recule();recule()}
                                   ^BDR:21: error: not found: value mes
                                 if (mes=="X") {recule();recule();recule()}
                                     ^